[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/TestArena.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Actors/Dummy.tscn" type="PackedScene" id=2]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -24, 0 )
}

[node name="TestArena" type="Node2D"]
script = ExtResource( 1 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BattleCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 3, 3 )

[node name="AsteroidSpawn1" type="Node2D" parent="."]
position = Vector2( -157, 168 )

[node name="AsteroidSpawn2" type="Node2D" parent="."]
position = Vector2( 181, 129 )

[node name="AsteroidSpawn3" type="Node2D" parent="."]
position = Vector2( 9, -229 )

[node name="AsteroidSpawn4" type="Node2D" parent="."]
position = Vector2( -95, -164 )

[node name="AsteroidSpawn5" type="Node2D" parent="."]
position = Vector2( 367, 212 )

[node name="AsteroidSpawn6" type="Node2D" parent="."]
position = Vector2( 341, -162 )

[node name="ShipSpawn1" type="Node2D" parent="."]
position = Vector2( -102, 763 )

[node name="ShipSpawn2" type="Node2D" parent="."]
position = Vector2( 120, 759 )

[node name="ShipSpawn3" type="Node2D" parent="."]
position = Vector2( -1, 700 )

[node name="ShipSpawn4" type="Node2D" parent="."]
position = Vector2( -897, 2 )

[node name="ShipSpawn5" type="Node2D" parent="."]
position = Vector2( -1003, 67 )

[node name="ShipSpawn6" type="Node2D" parent="."]
position = Vector2( -1009, -73 )

[node name="ShipSpawn7" type="Node2D" parent="."]
position = Vector2( -1049, -3 )

[node name="ShipSpawn8" type="Node2D" parent="."]
position = Vector2( 899, 3 )

[node name="ShipSpawn9" type="Node2D" parent="."]
position = Vector2( 959, -61 )

[node name="ShipSpawn10" type="Node2D" parent="."]
position = Vector2( 965, 45 )

[node name="ShipSpawn11" type="Node2D" parent="."]
position = Vector2( 1071, 1 )

[node name="ShipSpawn12" type="Node2D" parent="."]
position = Vector2( 3, -435 )

[node name="ShipSpawn13" type="Node2D" parent="."]
position = Vector2( -77, -501 )

[node name="ShipSpawn14" type="Node2D" parent="."]
position = Vector2( 92, -514 )

[node name="ShipSpawn15" type="Node2D" parent="."]
position = Vector2( 4, -585 )

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2( 2, 790 )

[node name="MovePoint" type="Node2D" parent="."]
position = Vector2( 0, -6 )

[node name="Dummy" parent="." instance=ExtResource( 2 )]
position = Vector2( -14, 1095 )
